added tests and fixed working version